Added basic css

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>Tennis - My Hobbie</title>
 </head>
 <body class="dark">
+    <button class="theme-button">Change Theme</button>
     <br />
     <div class="stuff">
-        <h1>Tennis</h1>
+        <h1>Tennis&#127934;</h1>
         <h2>My Hobbie</h2>
         <a href="https://en.wikipedia.org/wiki/Tennis" target="_blank">
             <img
